--- a/text-style-03.html
+++ b/text-style-03.html
@@ -1,17 +1,39 @@
 <!DOCTYPE html>
 <html style="background-color: beige;">
-    <body style="font-family: sans-serif;">
+    <head>
+        <!-- Working with Github Copilot for lil things :3 -->
+         
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
+        <title>Bokoblock</title>
+    </head>
+    <body style="font-family: 'Nunito', sans-serif;">
         <div style="margin: 0 auto; max-width: 600px; text-align: center;">
-            <!-- Converted from Markdown to HTML w/ https://markdowntohtml.com/ -->
+            <!-- Converted from Markdown to HTML w/ https://markdowntohtml.com/ with some modification-->
             
-            <h1 id="bokoblock">BOKOBLOCK</h1>
-            <p><strong>Bokoblock</strong> (stylized <strong>BOKOBLOCK</strong>) is an upcoming grid-based puzzle game I&#39;m making. Made in <a href="https://github.com/godotengine/godot/">Godot 4.3</a>.</p>
-            <h2 id="project">Project</h2>
-            <p>Everything is included in the <a href="src/">src</a> directory.</p>
-            <h2 id="notes">Notes</h2>
-            <p>P.S. This repo exists as a way for me to learn git and github, and gain some experience.</p>
-            <h3 id="heads-up">Heads up</h3>
-            <p>The game, same with this repo, are obviously still in development. I&#39;m working on the game, tracking changes, and learning more about git. You can view the codebase so far at your pace!</p>
+            <article>
+                <h1 id="bokoblock">BOKOBLOCK</h1>
+                <p><strong>Bokoblock</strong> (stylized <strong>BOKOBLOCK</strong>) is an upcoming grid-based puzzle game I&#39;m making. Made in <a href="https://github.com/godotengine/godot/">Godot 4.3</a>.</p>
+            </article>
+            <section>
+                <h2 id="project">Project</h2>
+                <p>Everything is included in the <a href="src/">src</a> directory.</p>
+            </section>
+            <section>
+                <h2 id="notes">Notes</h2>
+                <p>P.S. This repo exists as a way for me to learn git and github, and gain some experience.</p>
+            </section>
+            <section>
+                <h3 id="heads-up">Heads up</h3>
+                <p>The game, same with this repo, are obviously still in development. I&#39;m working on the game, tracking changes, and learning more about git. You can view the codebase so far at your pace!</p>
+            </section>
         </div>
+
+        <footer style="text-align: center; opacity: 0.5;">
+            <p>© 2025 Night Kolo</p>
+        </footer>
     </body>
 </html>
