Fixed directory renames

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </style>
     </head>
     <body> 
-        <img src="images/face.jpg">
+        <img src="img/face.jpg">
         <p class="handle">@nightkolo.me</p>
         <p>It is me!</p>
         <br><br><br><br><br>
