--- a/text-style-03.html
+++ b/text-style-03.html
@@ -10,7 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
         <title>Bokoblock</title>
     </head>
-    <body style="font-family: 'Nunito', sans-serif;">
+    <body style="font-family: &#39;Nunito&#39;, sans-serif;">
         <div style="margin: 0 auto; max-width: 600px; text-align: center;">
             <!-- Converted from Markdown to HTML w/ https://markdowntohtml.com/ with some modification-->
             
