--- a/text-style-02.html
+++ b/text-style-02.html
@@ -7,14 +7,14 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles/text-style-02.css">
-        <title>What Kolo's been thinkin' about</title>
+        <title>What Kolo&#39;s been thinkin&#39; about</title>
     </head>
     <body>
         <div id="text-body">
             <h1 class="h-topic">What would I like to learn…</h1>
             <div>
-                <img class="img-pfp shadow-effect" src="images/face.jpg" alt="PFP" title="owo">
-                <p class="author-info">Written by <strong>Night Kolo</strong> &#8226; 4–5 minutes</p>
+                <img class="img-pfp shadow-effect" src="img/face.jpg" alt="PFP" title="owo">
+                <p class="author-info">Written by <strong>Night Kolo</strong> &#8226; 4&#45;5 minutes</p>
             </div>
             <br><br>
             <hr>
@@ -26,9 +26,9 @@
                     Web development
                 </h2>
                 <p class="p-text-body shadow-effect">
-                    Web development I believe is a valuable skill to obtain and master, currently I confidently know fairly basic <abbr title="Hypertext Markup Language">HTML</abbr> and <abbr title="Cascading Style Sheets">CSS</abbr>, and JavaScript is a language I haven’t touched since I believe 2023.
+                    Web development I believe is a valuable skill to obtain and master, currently I confidently know fairly basic <abbr title="Hypertext Markup Language">HTML</abbr> and <abbr title="Cascading Style Sheets">CSS</abbr>, and JavaScript is a language I havent touched since I believe 2023.
                     <br><br>
-                    I’m thinking of learning HTML, then CSS, then Eventually JavaScript, from there I have all the skills needed to interact with different APIs, game development made on the web, and other imaginary nonsense I have stored in mind. Especially since I also have portfolio website that is in desperate call of a proper redesign.
+                    I&#39;m thinking of learning HTML, then CSS, then Eventually JavaScript, from there I have all the skills needed to interact with different APIs, game development made on the web, and other imaginary nonsense I have stored in mind. Especially since I also have portfolio website that is in desperate call of a proper redesign.
                 </p>
             </section>
             <section>
@@ -54,7 +54,7 @@
                 <p class="p-text-body shadow-effect">
                     I believe there is also a desire to get into programming languages, beyond GDscript for Godot. I have this lingering feeling that I should expand my programming prowess. There are many languages I believe are valuable and would provide me with important lessons in my career.
                     <br><br>
-                    Truthfully, programming languages may seem like a less exciting path to indulge in. Unlike web development, I'll most likely be building text-based applications with my obtained skills at the least.
+                    Truthfully, programming languages may seem like a less exciting path to indulge in. Unlike web development, I&#39;ll most likely be building text-based applications with my obtained skills at the least.
                 </p>
             </section>
             <section>
@@ -64,7 +64,7 @@
                         <li>
                             <span class="li-outer">C++</span>
                             <ul>
-                                <li>Here comes a language I’ve been desiring to indulge in for a while. I literally obtained a C++ Programming Book from University and began reading the 1st chapter—it's a good read. It taught very important lessons about the history of programming languages, which fascinated me. One consideration about C++ is unlike GDscript or Python, it’s quite a low level language. I would be writing code with close proximity to hardware. Additionally, C++ is not a breezy language to set up; it is difficult. As learning material, I would create simple applications with the language, even after hopefully getting a hand with the language. So this begs the question; Is C++ for me?</li>
+                                <li>Here comes a language I&#39;ve been desiring to indulge in for a while. I literally obtained a C++ Programming Book from University and began reading the 1st chapter—it&#39;s a good read. It taught very important lessons about the history of programming languages, which fascinated me. One consideration about C++ is unlike GDscript or Python, it&#39;s quite a low level language. I would be writing code with close proximity to hardware. Additionally, C++ is not a breezy language to set up; it is difficult. As learning material, I would create simple applications with the language, even after hopefully getting a hand with the language. So this begs the question; Is C++ for me?</li>
                             </ul>
                         </li>
                         <li>
@@ -81,19 +81,19 @@
                     Technologies (Notably git)
                 </h2>
                 <p class="p-text-body shadow-effect">
-                    One of the important skills as a software engineer is understanding and using git, I believe it is high necessity in the field. Granted, I have been using git to commit, push, track my projects to Github, but I feel I’m a basic user of git, and haven’t mastered it yet.
+                    One of the important skills as a software engineer is understanding and using git, I believe it is high necessity in the field. Granted, I have been using git to commit, push, track my projects to Github, but I feel I&#39;m a basic user of git, and haven&#39;t mastered it yet.
                 </p>
             </section>
             <section>
                 <h2 class="h-topic">
-                    Finally, let’s talk about Game Development (pretty rambly)
+                    Finally, let&#39;s talk about Game Development (pretty rambly)
                 </h2>
                 <p class="p-text-body shadow-effect">
                     TBA
                 </p>
             </section>
             <footer>
-                <p class="footer-text">© 2025 Night Kolo</p>
+                <p class="footer-text">&#169; 2025 Night Kolo</p>
             </footer>
         </div>
     </body>
