--- a/bokoblock-readme.html
+++ b/bokoblock-readme.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html style="background-color: beige;">
     <head>
-        <!-- Working with Github Copilot for lil things :3 -->
-         
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -10,7 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
         <title>Bokoblock</title>
     </head>
-    <body style="font-family: &#39;Nunito&#39;, sans-serif;">
+    <body style="font-family: 'Nunito', sans-serif;">
         <div style="margin: 0 auto; max-width: 600px; text-align: center;">
             <!-- Converted from Markdown to HTML w/ https://markdowntohtml.com/ with some modification-->
             
