--- a/grid.html
+++ b/grid.html
@@ -3,12 +3,67 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/theme.css">
   <title>Grid Practice</title>
 </head>
 <body>
-  <div>
+  <div style="
+      display: grid;
+      grid-template-columns: 100px 100px;
+    ">
     <div style="background-color: gray;">div 1</div>
-    <div style="background-color: lightpink;">div 2</div>
+    <div style="background-color: lightpink;">div 2
+      <p>text</p>
+    </div>
+  </div>
+
+  <div style="
+      margin-top: 30px;
+      display: grid;
+      grid-template-columns: 100px 100px 200px;
+    ">
+    <div style="background-color: gray;">100px</div>
+    <div style="background-color: lightpink;">100px<p>text</p></div>
+    <div style="background-color: gray;">200px</div>
+    <div style="background-color: gray;">100px</div>
+  </div>
+
+  <div style="
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: 100px 1fr;
+  ">
+    <div style="background-color: gray;">100px</div>
+    <div style="background-color: darkgray;">1fr</div>
+  </div>
+
+  <div style="
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: 100px 1fr 2fr;
+  ">
+    <div style="background-color: gray;">100px</div>
+    <div style="background-color: darkgray;">1fr</div>
+    <div style="background-color: gray;">2fr</div>
+  </div>
+
+  <div style="
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 10px;
+    row-gap: 30px
+  ">
+    <div style="background-color: gray; height: 100px;">1fr</div>
+    <div style="background-color: darkgray; height: 100px;">1fr</div>
+    <div style="background-color: gray; height: 100px;">1fr</div>
+    <div style="background-color: darkgray; height: 100px;">1fr</div>
+    <div style="background-color: gray; height: 100px;">1fr</div>
+    <div style="background-color: darkgray; height: 100px;">1fr</div>
+    <div style="background-color: gray; height: 100px;">1fr</div>
+    <div style="background-color: darkgray; height: 100px;">1fr</div>
+    <div style="background-color: gray; height: 100px;">1fr</div>
+    
   </div>
 </body>
 </html>
