--- a/legacy/command-operations.html
+++ b/legacy/command-operations.html
@@ -37,7 +37,7 @@
         }
         </style>
     </head>
-    <body style="font-family: &#39;Nunito&#39;, sans-serif;">
+    <body style="font-family: 'Nunito', sans-serif;">
         <h1 id="terminal-command-cheat-sheet-for-finder-operations">Terminal Command Cheat Sheet for Finder Operations</h1>
         <h2 id="table-of-contents">Table of Contents</h2>
         <ul>
